  Bugzilla Report 31951.

* build.sysclasspath now also affects the bootclasspath handling of
  spawned Java VMs.  If you set build.sysclasspath to anything other
  than "ignore" (or leave it unset, since "ignore" is the default when
  it comes to bootclasspath handling), then the bootclasspath of the
  VM running Ant will be added to the bootclasspath you've specified.

Fixed bugs:
-----------

* Translate task does not remove tokens when a key is not found.
  It logs a verbose message.  Bugzilla Report 13936.

* Wrapper scripts did not detect WINNT value of dynamic OS environment
  variable when logged into workstations using Novell authentication.
  Bugzilla Report 30366.

* DependScanner.getResource() always returned nonexistent resources,
  even when the resource actually existed.  Bugzilla Report 30558.

* <apply> was broken with classfilesets.  Bugzilla Report 30567.

* The first file open that took place when using input files with the
  <exec>, <apply>, or <java> tasks was always logged to System.out
  instead of to the managing Task.

* Incorrect task name with invalid "javac" task after a "presetdef.
  Bugzilla reports 31389 and 29499.
  
* <manifest> was not printing warnings about invalid manifest elements.
  Bugzilla report 32190

* <replace> got out of memory on large files (part of report 32566). 
  <replace> can now handle files as long as there is enough disk space
  available.


Other changes:
--------------

* <echoproperties> now (alphanumerically) sorts the property list
  before echoing, when you request XML output (format="xml"). 

* Changed default tempdir for <javac> from user.dir to java.io.tmpdir.

* A new base class DispatchTask has been added to facilitate elegant 
  creation of tasks with multiple actions.

* Major revision of <wsdltodotnet>. Supports mono wsdl and the microsoft
  wsdl run on mono, as well as most of the .NET WSE2.0 options. Extra
  schemas (files or urls) can be named in the <schema> element.